--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> See you online at 9am PST! xoxo Byee
+          <strong>Valentine Date:</strong> See you online at 9am PST! xoxo Byee!!!
         </p>
       </div>
     </div>
